test: 테스트 컴파일 에러 수정